--- a/admin/package.json
+++ b/admin/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
-    "commafy": "^0.0.6",
     "dotenv": "^16.4.5",
+    "indian-number-format": "^1.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
