--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.8",
     "dotenv": "^16.4.5",
     "indian-number-format": "^1.0.5",
+    "npm-number-to-word": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
