--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blueprintjs/core": "^5.16.0",
     "axios": "^1.7.8",
     "dotenv": "^16.4.5",
     "indian-number-format": "^1.0.5",
