--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.8",
     "dotenv": "^16.4.5",
     "indian-number-format": "^1.0.5",
+    "npm-number-to-word": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
